--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://emiorellana.github.io/quote-gen-machine",
+  "homepage": "https://emiorellana.github.io/quote-gen-machine/",
   "name": "quote-gen-machine",
   "version": "0.1.0",
   "private": true,
